# ClassInformer-linux

./: .gitmodules  CMakeLists.txt  Compat.h  Main.cpp  MainDialog.cpp  dialog.ui
